# cifoin-lab3

./: CIRCUITS_&_COMPACT_MODELS.ipynb  LabBook_30.pptx  README.md  main.py  pyproject.toml
