[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cifoin-lab3"
version = "0.1.0"
description = "Library for CIFOIN Filters (MZI & Rings) Laboratory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdsfactory==9.34.0",
    "gplugins[femwell,tidy3d,sax]==2.0.1",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "shapely>=2.0",
    "pytz",
    "tqdm>=4.66",
    "scikit-learn>=1.8.0",
]
